--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+* {
+  font-family: "Fira Sans", sans-serif;
+}
+/* Navbar */
+.navbar {
+  background-color: #00365a;
+}
+.navbar-toggler {
+  border-color: #fff !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-brand {
+  color: #9ae2ff !important;
+  font-weight: 500 !important;
+}
+.navbar-brand img {
+  width: 50px;
+  margin-right: 10px;
+}
+.language img {
+  width: 26px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.nav-item {
+  font-size: 20px;
+}
+@media (min-width: 992px) {
+  .nav-item {
+    border: 1px solid #fff !important;
+    border-radius: 30px;
+  font-size: 15px;
+
+  }
+  .nav-item:last-child {
+    border: none !important;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-toggler {
+  border: none !important;
+  font-size: 30px !important;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-toggler:focus {
+  text-decoration: none;
+  outline: 0;
+  box-shadow: none !important;
 }
