--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* WhatPatientsSay-section */
+.whatPatientsSay-section h1 {
+  font-size: 35px;
+}
