--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,22 @@
 .whatPatientsSay-section h1 {
   font-size: 35px;
 }
+
+/* Services-section */
+.services-section .card {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.services-section .card-img-top {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
+.card-text a {
+  text-decoration: none;
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
+}
