--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Fira Sans", sans-serif;
+  overflow: hidden;
 }
 /* Navbar */
 .navbar {
@@ -82,4 +83,24 @@
   color: #000;
   font-size: 18px;
   font-weight: 600;
+}
+/* FOOTER */
+.footer {
+  padding: 100px;
+}
+.logo-footer {
+  width: 45px;
+  margin-right: 8px;
+}
+.bold-text {
+  font-weight: bold;
+}
+.footer a {
+  text-decoration: none;
+  color: #000;
+}
+.footer a:hover {
+  text-decoration: underline;
+  transition: 0.3ms;
+
 }
