--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   margin: 0;
   padding: 0;
 }
+
+/* Header */
+.header {
+  background-image: url("./assets/imgs/introsection/cardiology.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* Navbar */
 .navbar {
   background-color: transparent;
@@ -57,17 +64,20 @@
 }
 /* Introsection */
 .introsection {
-  height: 85vh;
+  height: 86vh;
   width: 100%;
 }
-.header {
-  background-image: url("./assets/imgs/introsection/cardiology.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+/* Videos-section */
+.videos-section .card {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
-/* WhatPatientsSay-section */
-.whatPatientsSay-section h1 {
-  font-size: 35px;
+.videos-section .card-img-top {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
 }
 
 /* Services-section */
@@ -87,6 +97,15 @@
   color: #000;
   font-size: 18px;
   font-weight: 600;
+}
+/* videos-section */
+.mySwiper {
+  padding-bottom: 30px !important;
+}
+.videos-section .card-text {
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
 }
 /* FOOTER */
 .footer {
