main page was completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 * {
   font-family: "Fira Sans", sans-serif;
-  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
@@ -142,3 +141,8 @@
   margin-top: 90px;
   margin-bottom: 20px;
 }
+
+.text-bold {
+  font-weight: 800 !important;
+}
+
