--- a/src/main.css
+++ b/src/main.css
@@ -12,28 +12,27 @@ h2 {
   background-color: #002742;
 }
 
-.section, .services-page, .contact-section, .aboutDisease-page, .atMedia-page, .diseases-page, .aboutme-section {
+.section, .services-page, .contact-section, .oneVideo-page, .aboutDisease-page, .atMedia-page, .diseases-page, .aboutme-section {
   background-color: #f5f6fa;
   padding: 100px 0;
 }
 
-.card-style, .services-page .card, .aboutDisease-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
-  border-radius: 30px;
+.card-style, .services-page .card, .oneVideo-page .card, .aboutDisease-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
+  border-radius: 20px;
   height: 370px;
   background-color: transparent;
   border: none;
 }
 
-.card-img-style, .services-page .card-head img, .aboutDisease-page .cards-container .card-img-top, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+.card-img-style, .services-page .card-head img, .oneVideo-page .cards-container .card-img-top, .aboutDisease-page .cards-container .card-img-top, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
+  border-radius: 20px;
   width: 100%;
   height: 15rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.card-text-a-style, .services-page .card-text a, .aboutDisease-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
+.card-text-a-style, .services-page .card-text a, .oneVideo-page .card-text a, .aboutDisease-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
   text-decoration: none;
   color: #000;
   font-size: 18px;
@@ -52,6 +51,37 @@ h2 {
 .nav-text span,
 .nav-text a {
   color: #025a82;
+}
+
+.card-head {
+  position: relative;
+}
+.card-head:hover .overlay {
+  opacity: 1;
+  transition: 0.2s ease-in;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  border-radius: 20px;
+}
+.overlay .link-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  transform: translate(-50%, -50%);
+  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  color: #fff;
+  top: 50%;
+  left: 50%;
 }
 
 /* Navbar */
@@ -88,7 +118,7 @@ h2 {
 @media (min-width: 992px) {
   .nav-item {
     border: 1px solid #fff !important;
-    border-radius: 30px;
+    border-radius: 20px;
     font-size: 15px;
   }
   .nav-item:last-child {
@@ -96,7 +126,7 @@ h2 {
   }
   .nav-item:not(:last-child):hover {
     border: 1px solid #002742 !important;
-    border-radius: 30px;
+    border-radius: 20px;
     transition: 200ms ease-in;
   }
 }
@@ -190,14 +220,13 @@ h2 {
 /* Aboutme Section */
 .aboutme-section .doctorImg-container {
   height: 300px;
-  border-radius: 30px;
 }
 .aboutme-section .doctorImg-container img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 30px;
+  border-radius: 20px;
 }
 .aboutme-section .info-rows-container span {
   background-color: #002742;
@@ -214,7 +243,6 @@ h2 {
   margin-bottom: 5rem !important;
 }
 .diseases-page .card-head img {
-  border-radius: 30px;
   height: 22rem;
 }
 /* AtMedia Page */
@@ -223,12 +251,11 @@ h2 {
   margin-bottom: 5rem !important;
 }
 .atMedia-page .card-head img {
-  border-radius: 30px;
   height: 22rem;
 }
 /* AboutDisease Page */
 .aboutDisease-page .article-image {
-  border-radius: 30px;
+  border-radius: 20px;
   width: 90%;
   height: 430px;
   -o-object-fit: cover;
@@ -249,6 +276,14 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
   }
+}
+/* OneVideo Page */
+.oneVideo-page iframe {
+  border-radius: 20px;
+  width: 90%;
+  height: 430px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /* Contact Section */
 .contact-section .info-row a {
@@ -303,6 +338,5 @@ h2 {
   margin-bottom: 5rem !important;
 }
 .services-page .card-head img {
-  border-radius: 30px;
   height: 22rem;
 }/*# sourceMappingURL=main.css.map */
