--- a/src/main.css
+++ b/src/main.css
@@ -4,27 +4,23 @@
   padding: 0;
 }
 
-h2 {
-  font-size: 42px;
-}
-
 .bg-blue {
   background-color: #002742;
 }
 
 .section, .services-page, .contact-section, .oneVideo-page, .aboutDisease-page, .atMedia-page, .diseases-page, .aboutme-section {
   background-color: #f5f6fa;
-  padding: 100px 0;
+  padding: 10rem 0;
 }
 
-.card-style, .services-page .card, .oneVideo-page .card, .aboutDisease-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
+.card-style, .services-page .card, .aboutDisease-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
   border-radius: 20px;
-  height: 370px;
+  height: 23rem;
   background-color: transparent;
   border: none;
 }
 
-.card-img-style, .services-page .card-head img, .oneVideo-page .cards-container .card-img-top, .aboutDisease-page .cards-container .card-img-top, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
+.card-img-style, .services-page .card-head img, .aboutDisease-page .cards-container .card-img-top, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
   border-radius: 20px;
   width: 100%;
   height: 15rem;
@@ -32,7 +28,7 @@ h2 {
      object-fit: cover;
 }
 
-.card-text-a-style, .services-page .card-text a, .oneVideo-page .card-text a, .aboutDisease-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
+.card-text-a-style, .services-page .card-text a, .aboutDisease-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
   text-decoration: none;
   color: #000;
   font-size: 18px;
@@ -80,13 +76,11 @@ h2 {
   transform: translate(-50%, -50%);
   transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
   color: #fff;
-  top: 50%;
-  left: 50%;
 }
 
 .line {
   border: 1px solid #00548b;
-  width: 100px;
+  width: 6.3rem;
   margin: auto;
   margin-top: 20px;
 }
@@ -110,7 +104,7 @@ h2 {
   margin-right: 10px;
 }
 .navbar .language img {
-  width: 26px;
+  width: 1.5rem;
 }
 .navbar .nav-item {
   font-size: 16px;
@@ -201,10 +195,6 @@ h2 {
   width: 50px;
   margin-right: 10px;
 }
-.footer .copyrighter-row {
-  margin-top: 90px;
-  margin-bottom: 20px;
-}
 .footer .bold-text {
   font-weight: 500;
 }
@@ -220,7 +210,7 @@ h2 {
 
 /* Aboutme Section */
 .aboutme-section .doctorImg-container {
-  height: 300px;
+  height: 19rem;
 }
 .aboutme-section .doctorImg-container img {
   width: 100%;
@@ -240,7 +230,7 @@ h2 {
 
 /* Diseases Page */
 .diseases-page .card {
-  height: 400px;
+  height: 25rem;
   margin-bottom: 5rem !important;
 }
 .diseases-page .card-head img {
@@ -248,7 +238,7 @@ h2 {
 }
 /* AtMedia Page */
 .atMedia-page .card {
-  height: 400px;
+  height: 25rem;
   margin-bottom: 5rem !important;
 }
 .atMedia-page .card-head img {
@@ -258,7 +248,7 @@ h2 {
 .aboutDisease-page .article-image {
   border-radius: 20px;
   width: 90%;
-  height: 430px;
+  height: 26rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -282,10 +272,11 @@ h2 {
 .oneVideo-page iframe {
   border-radius: 20px;
   width: 90%;
-  height: 430px;
+  height: 26px;
   -o-object-fit: cover;
      object-fit: cover;
 }
+
 /* Contact Section */
 .contact-section .info-row a {
   text-decoration: none;
@@ -335,7 +326,7 @@ h2 {
 
 /* Services Page */
 .services-page .card {
-  height: 400px;
+  height: 25rem;
   margin-bottom: 5rem !important;
 }
 .services-page .card-head img {
