--- a/src/main.scss
+++ b/src/main.scss
@@ -3,9 +3,6 @@
   margin: 0;
   padding: 0;
 }
-h2 {
-  font-size: 42px;
-}
 
 $navbar-brand-color: #9ae2ff;
 $light-gray: #f5f6fa;
@@ -16,11 +13,11 @@ $medium-blue: #002742;
 }
 .section {
   background-color: $light-gray;
-  padding: 100px 0;
+  padding: 10rem 0;
 }
 .card-style {
   border-radius: 20px;
-  height: 370px;
+  height: 23rem;
   background-color: transparent;
   border: none;
 }
@@ -74,16 +71,15 @@ $medium-blue: #002742;
     transform: translate(-50%, -50%);
     transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
     color: #fff;
-    top: 50%;
-    left: 50%;
   }
 }
 .line {
   border: 1px solid #00548b;
-  width: 100px;
+  width: 6.3rem;
   margin: auto;
   margin-top: 20px;
 }
+
 /* Navbar */
 .navbar {
   @extend .custom-gradient;
@@ -107,7 +103,7 @@ $medium-blue: #002742;
   }
 
   .language img {
-    width: 26px;
+    width: 1.5rem;
   }
 
   .nav-item {
@@ -226,10 +222,7 @@ $medium-blue: #002742;
       margin-right: 10px;
     }
   }
-  .copyrighter-row {
-    margin-top: 90px;
-    margin-bottom: 20px;
-  }
+
   .bold-text {
     font-weight: 500;
   }
@@ -251,7 +244,7 @@ $medium-blue: #002742;
 .aboutme-section {
   @extend .section;
   .doctorImg-container {
-    height: 300px;
+    height: 19rem;
     img {
       width: 100%;
       height: 100%;
@@ -275,7 +268,7 @@ $medium-blue: #002742;
   @extend .section;
   .card {
     @extend .card-style;
-    height: 400px;
+    height: 25rem;
     margin-bottom: 5rem !important;
   }
 
@@ -293,7 +286,7 @@ $medium-blue: #002742;
   @extend .section;
   .card {
     @extend .card-style;
-    height: 400px;
+    height: 25rem;
     margin-bottom: 5rem !important;
   }
 
@@ -312,7 +305,7 @@ $medium-blue: #002742;
   .article-image {
     border-radius: 20px;
     width: 90%;
-    height: 430px;
+    height: 26rem;
     object-fit: cover;
   }
   .article-text {
@@ -349,17 +342,8 @@ $medium-blue: #002742;
   iframe {
     border-radius: 20px;
     width: 90%;
-    height: 430px;
+    height: 26px;
     object-fit: cover;
-  }
-  .card {
-    @extend .card-style;
-  }
-  .cards-container .card-img-top {
-    @extend .card-img-style;
-  }
-  .card-text a {
-    @extend .card-text-a-style;
   }
 }
 
@@ -414,7 +398,7 @@ $medium-blue: #002742;
   @extend .section;
   .card {
     @extend .card-style;
-    height: 400px;
+    height: 25rem;
     margin-bottom: 5rem !important;
   }
 
