--- a/src/main.css
+++ b/src/main.css
@@ -13,14 +13,14 @@
   padding: 10rem 0;
 }
 
-.card-style, .services-page .card, .aboutDisease-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
+.card-style, .services-page .card, .atMedia-page .card, .diseases-page .card, .diseases-section .card, .videos-section .card {
   border-radius: 20px;
   height: 23rem;
   background-color: transparent;
   border: none;
 }
 
-.card-img-style, .services-page .card-head img, .aboutDisease-page .cards-container .card-img-top, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
+.card-img-style, .services-page .card-head img, .atMedia-page .card-head img, .diseases-page .card-head img, .diseases-section .card-img-top, .videos-section .video-card-top {
   border-radius: 20px;
   width: 100%;
   height: 15rem;
@@ -28,7 +28,7 @@
      object-fit: cover;
 }
 
-.card-text-a-style, .services-page .card-text a, .aboutDisease-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
+.card-text-a-style, .services-page .card-text a, .atMedia-page .card-text a, .diseases-page .card-text a, .diseases-section .card-text a, .videos-section .card-text a {
   text-decoration: none;
   color: #000;
   font-size: 18px;
@@ -81,14 +81,12 @@
 .line {
   border: 1px solid #00548b;
   width: 6.3rem;
-  margin: auto;
-  margin-top: 20px;
 }
 
 /* Navbar */
 .navbar .navbar-toggler {
   border: none !important;
-  font-size: 30px !important;
+  font-size: 1.8rem !important;
 }
 .navbar .navbar-toggler:focus {
   text-decoration: none;
@@ -101,13 +99,13 @@
 }
 .navbar .navbar-brand img {
   width: 3.2rem;
-  margin-right: 10px;
+  margin-right: 0.7rem;
 }
 .navbar .language img {
   width: 1.5rem;
 }
 .navbar .nav-item {
-  font-size: 16px;
+  font-size: 1rem;
 }
 .navbar .nav-link:hover {
   color: #002742 !important;
@@ -133,7 +131,7 @@
 }
 @media (min-width: 992px) and (max-width: 768px) {
   .navbar-toggler {
-    font-size: 25px !important;
+    font-size: 1.6rem !important;
   }
 }
 /* Introsection */
@@ -164,15 +162,7 @@
 }
 
 /* Videos Section */
-.videos-section .mySwiper {
-  padding-bottom: 50px !important;
-}
-
 /* Diseases Section  */
-.diseases-section .mySwiper {
-  padding-bottom: 50px !important;
-}
-
 /* Footer */
 .footer {
   border-top: 1px solid #e4e4e4;
@@ -256,11 +246,12 @@
   display: inline-block;
   margin-bottom: 15px;
 }
+
 /* OneVideo Page */
 .oneVideo-page iframe {
   border-radius: 20px;
   width: 90%;
-  height: 26px;
+  height: 26rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
